changed the style

--- a/MaturityWeb/appsettings.json
+++ b/MaturityWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Constr": "Server=DESKTOP-L1IDKIJ;Database=MaturityAssessment;Integrated Security=true"
+    "Constr": "Server=ROHANJHA;Database=MaturityAssessment;Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
